--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="column">
         <h2>text</h2>
         <button><i class="fa-solid fa-lock"></i></button>
+        <!-- <i class="fa-solid fa-lock-open"></i> -->
     </div>
 </body>
 
