--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <button><i class="fa-solid fa-lock"></i></button>
         <!-- <i class="fa-solid fa-lock-open"></i> -->
     </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
